--- a/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,17 +5,24 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2 class="text-primary">@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4 ">
+@*<h2 class="text-primary">@ViewData["Title"]</h2>*@
+<div class="row container-fluid">
+    
+    <div class="col-md-6">
+
+
+        <section><img src="~/img/imglog.png" /></section>
+    </div>
+   
+    <div class="col-md-4">
         <section>
             <form id="account" method="post">
                 <h3 class="text-primary">Use a local account to log in.</h3>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
+                <div class="form-floating mb-4">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label bi bi-envelope"></label>
+                   <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating">
@@ -25,7 +32,7 @@
                 </div>
                 <div>
                     <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
+                        <label asp-for="Input.RememberMe" class="form-label text-primary">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
@@ -47,9 +54,6 @@
                 </div>
             </form>
         </section>
-    </div>
-    <div class="col-md-4">
-        <section><img align="left" src="~/img/imglog.png" /></section>
     </div>
 </div>
 @* <section>
