--- a/TRINTY ESTATES/Views/Shared/_Layout.cshtml
+++ b/TRINTY ESTATES/Views/Shared/_Layout.cshtml
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="~/css/BootswatchTheme.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/TRINTY_ESTATES.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body style="background-color:rgb( 7,54,66) !important;">
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="border-radius:0px !important;margin:0px !important;">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">TRINITY ESTATES</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarColor02">
+                <div class="collapse navbar-collapse" id="navbarColor02" style="display:inherit !important;">
                     <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -33,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class=".bg-dark" >
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -45,7 +46,8 @@
         </div>*@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
