--- a/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
@@ -11,21 +11,21 @@
     <div class="col-md-6">
 
 
-        <section><img src="~/img/imglog.png" /></section>
+        <section><img src="~/img/imglog.png" width="600px" /></section>
     </div>
    
-    <div class="col-md-4">
+    <div class="col-md-2">
         <section>
             <form id="account" method="post">
-                <h3 class="text-primary">Use a local account to log in.</h3>
+                <h3 class="text-secondary">Use a local account to log in.</h3>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating mb-4">
+                <div class="form-floating md-2">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                    <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating">
+                <div class="form-floating md-2">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
                     <label asp-for="Input.Password" class="form-label"></label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -48,45 +48,15 @@
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
-                    <p>
+                   @* <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+                    </p>*@
                 </div>
             </form>
         </section>
     </div>
 </div>
-@* <section>
-            <h3 class="text-primary">Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-             <div class="col-md-4">
 
-    </div>
-        </section>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
