--- a/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TRINTY ESTATES/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,54 +7,54 @@
 
 @*<h2 class="text-primary">@ViewData["Title"]</h2>*@
 <div class="row container-fluid">
-    
-    <div class="col-md-6">
+    <div class="row gy-5">
+        <div class="col-md-7 col-md-offset-2">
+            <section><img src="~/img/imglog.png" width="600px" /></section>
+        </div>
 
-
-        <section><img src="~/img/imglog.png" width="600px" /></section>
-    </div>
-   
-    <div class="col-md-2">
-        <section>
-            <form id="account" method="post">
-                <h3 class="text-secondary">Use a local account to log in.</h3>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating md-2">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                   <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating md-2">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label text-primary">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+        <div class="col-md-3">
+            <section>
+                <form id="account" method="post">
+                    <h3 class="text-secondary">Use a local account to log in.</h3>
+                    <hr />
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-floating mb-2">
+                        <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                        <label asp-for="Input.Email" class="form-label"></label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                   @* <p>
+                    <div class="form-floating mb-2">
+                        <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
+                        <label asp-for="Input.Password" class="form-label"></label>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div>
+                        <div class="checkbox">
+                            <label asp-for="Input.RememberMe" class="form-label text-primary">
+                                <input class="form-check-input" asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <div>
+                        <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    </div>
+                    <div>
+                        <p>
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        </p>
+                        <p>
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        </p>
+                        @* <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>*@
-                </div>
-            </form>
-        </section>
+                        </p>*@
+                    </div>
+                </form>
+            </section>
+        </div>
     </div>
+
 </div>
 
 
