--- a/TRINTY ESTATES/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TRINTY ESTATES/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,9 +9,9 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1 class="container">Manage your account</h1>
 
-<div>
+<div class="container">
     <h2>Change your account settings</h2>
     <hr />
     <div class="row">
