--- a/TRINTY ESTATES/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TRINTY ESTATES/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,39 +4,42 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="row">
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <div class="col-md-4">
-                <section><img src="~/img/imglog.png" width="600px" /></section>
-            </div>
-        </section>
-    </div>
-    <div class="col-md-3" align="left">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h3 class="text-secondary">Create a new account.</h3>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating md-2">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating md-2">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="mb-2 w-100 btn btn-lg btn-primary">Register</button>
+<div class="row container-fluid">
+    <div class="row gy-5">
+        <div class="col-md-7 col-md-offset-2">
+            <section>
+                <div class="col-md-7">
+                    <section><img src="~/img/imglog.png" width="600px" /></section>
+                </div>
+            </section>
+        </div>
+        <div class="col-md-3">
+            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                <h3 class="text-secondary mt-3">Create a new account.</h3>
+                <hr />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-floating mb-2">
+                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <label asp-for="Input.Email"></label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-2">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="Input.Password"></label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-2">
+                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="Input.ConfirmPassword"></label>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
 
-        </form>
-    </div>
+                <button id="registerSubmit" type="submit" class="mb-2 w-100 btn btn-lg btn-primary">Register</button>
+
+            </form>
+        </div>
     
+    </div>
 </div>
 
 
