--- a/TRINTY ESTATES/Views/Home/Index.cshtml
+++ b/TRINTY ESTATES/Views/Home/Index.cshtml
@@ -6,24 +6,24 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="4000">
+        <div class="carousel-item active" data-bs-interval="3000">
             <img src="~/img/house3.jpg" class="d-block w-100" alt="..."style="width:100%; height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
+                <h1>First slide label</h1>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
         </div>
-        <div class="carousel-item" data-bs-interval="4000">
+        <div class="carousel-item" data-bs-interval="3000">
             <img src="~/img/house2.jpg" class="d-block w-100" alt="..." style="width:100%; height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
+                <h1>Second slide label</h1>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
-        <div class="carousel-item" data-bs-interval="4000">
+        <div class="carousel-item" data-bs-interval="3000">
             <img src="~/img/house3.jpg" class="d-block w-100" alt="..." style="width:100%; height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
+                <h1>Third slide label</h1>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
         </div>
@@ -39,7 +39,58 @@
 </div>
 
 
+@*Cards for available houses*@
 
+<section id="gallery">
+  <div class="container">
+    <div class="row mt-5">
+    <div class="col-lg-3 mb-3">
+    <div class="card text-center">
+      <img src="~/img/house2.jpg" />
+      <div class="card-body">
+        <h5 class="card-title">Sunset</h5>
+        <p class="card-text">Sample House 1</p>
+       <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+      </div>
+     </div>
+    </div>
+  <div class="col-lg-3 mb-3">
+  <div class="card text-center">
+      <img src="~/img/house2.jpg" />
+      <div class="card-body">
+        <h5 class="card-title">Sunset</h5>
+        <p class="card-text">Sample House 2</p>
+       <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+      </div>
+      </div>
+    </div>
+    <div class="col-lg-3 mb-3">
+    <div class="card text-center">
+      <img src="~/img/house2.jpg" />
+      <div class="card-body">
+        <h5 class="card-title">Sunset</h5>
+        <p class="card-text">Sample House 3</p>
+       <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+      </div>
+     </div>
+    </div>
+     <div class="col-lg-3 mb-3">
+    <div class="card text-center">
+      <img src="~/img/house2.jpg" />
+      <div class="card-body">
+        <h5 class="card-title">Sunset</h5>
+        <p class="card-text">Sample House 4</p>
+       <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+      </div>
+     </div>
+    </div>
+  </div>
+</div>
+</section>
 
 
 @*<div class="">
