--- a/TRINTY ESTATES/Views/Home/Index.cshtml
+++ b/TRINTY ESTATES/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="carousel-item" data-bs-interval="3000">
             <img src="~/img/house3.jpg" class="d-block w-100" alt="..." style="width:100%; height:500px">
             <div class="carousel-caption d-none d-md-block">
-                <h1>Third slide label</h1>
+                <h1 class="text-danger">GET A LANDED PROPERTY</h1>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
         </div>
