--- a/TRINTY ESTATES/Views/Listings/Listings.cshtml
+++ b/TRINTY ESTATES/Views/Listings/Listings.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-
+﻿@model ListingsModel
 <section id="gallery">
     <div class="container">
         <div class="row mt-5">
@@ -10,8 +8,18 @@
                     <div class="card-body">
                         <h5 class="card-title">Sunset</h5>
                         <p class="card-text">Sevilai Estates</p>
-                        <a href="" class="btn btn-outline-success btn-sm">Read More</a>
-                        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        <a href="@Url.Action("Listings")" class="btn btn-outline-success btn-sm">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 mb-3">
+                <div class="card text-center">
+                    <img src="~/img/house2.jpg" />
+                    <div class="card-body">
+                        <h5 class="card-title">@Model.Title</h5>
+                        <p class="card-text">@Model.Description</p>
+                        <a href="@Url.Action("Listings")" class="btn btn-outline-success btn-sm">Read More</a>
                     </div>
                 </div>
             </div>
@@ -22,8 +30,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sunset</h5>
                         <p class="card-text">Sevilai Estates</p>
-                        <a href="" class="btn btn-outline-success btn-sm">Read More</a>
-                        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        <a href="@Url.Action("Listings")" class="btn btn-outline-success btn-sm">Read More</a>
                     </div>
                 </div>
             </div>
@@ -34,26 +41,11 @@
                     <div class="card-body">
                         <h5 class="card-title">Sunset</h5>
                         <p class="card-text">Sevilai Estates</p>
-                        <a href="" class="btn btn-outline-success btn-sm">Read More</a>
-                        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 mb-3">
-                <div class="card text-center">
-                    <img src="~/img/house2.jpg" />
-                    <div class="card-body">
-                        <h5 class="card-title">Sunset</h5>
-                        <p class="card-text">Sevilai Estates</p>
-                        <a href="" class="btn btn-outline-success btn-sm">Read More</a>
-                        <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        <a href="@Url.Action("Listings")" class="btn btn-outline-success btn-sm">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
- </section>
-
-
+</section>
 
