--- a/TRINTY ESTATES/Views/Shared/_Layout.cshtml
+++ b/TRINTY ESTATES/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  asp-controller="Rent" asp-action="Rent">Rent</a>
+                        <a class="nav-link"  asp-controller="Listings" asp-action="Listings">Listings</a>
                     </li>
                     <li class="nav-item">
-                        <a  class="nav-link" asp-controller="RentListings" asp-action="RentListings">Listings</a>
+                        <a  class="nav-link" asp-controller="RentListings" asp-action="RentListings">Pending</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
